cmake_minimum_required(VERSION 3.16)
include(../pico-sdk/pico_sdk_init.cmake)
project(teletext)
pico_sdk_init()
add_executable(teletext main.cpp composite.cpp buffer.cpp)
target_link_libraries(teletext pico_stdlib pico_multicore hardware_pio hardware_dma)
pico_generate_pio_header(teletext ${CMAKE_CURRENT_LIST_DIR}/composite.pio)
pico_add_extra_outputs(teletext)
pico_enable_stdio_usb(teletext 1)
pico_enable_stdio_uart(teletext 0)
add_custom_target (flash picotool load -f ${PROJECT_NAME}.uf2 && picotool reboot DEPENDS ${PROJECT_NAME})
